@@ -4,3 +4,5 @@
 * Make IOErr be an error type which can be cast to when needed
 * For non Cmd cases, a boolean is converted into an int resp, not a string
 * Scanner interface is slightly different
+* Pool uses a Done method on the ConnCmder it returns, instead of having a Put
+  method
